rtest/tests/jsr335/Semantics/ConstructorReferenceAnalysis/ArrayReferences/ShouldCompile/syntax03/Test.java
// .result=COMPILE_PASS
import java.util.*;

public class Test {
	
	interface A {
		void m(int i);
	}
	
	public static void main(String[] arg) {
		A a = List[][][][][][][][]::new;
	}

}